--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,7 @@ jobs:
     docker:
       # specify the version you desire here
       - image: circleci/node:8.9.4
+      - image: redis:2.8.0
       
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
