circle with redis

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
     docker:
       # specify the version you desire here
       - image: circleci/node:8.9.4
-      
+      - image: redis
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
@@ -29,10 +29,6 @@ jobs:
           - v1-dependencies-
               
       - run: npm install
-
-      - run:
-          name: Wait for redis
-          command: dockerize -wait tcp://localhost:6379 -timeout 1m
 
       - save_cache:
           paths:
