--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
     "jest": "^22.4.2",
+    "redis": "^2.8.0",
     "jest-enzyme": "^4.2.0",
     "mocha": "^5.0.1",
     "sinon": "^4.4.2",
