--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "dev": "webpack -d --watch",
     "server": "nodemon server/server.js",
     "seed": "node milseed.js",
-    "generatePost": "mkdir millions && node milseed.js POST",
+    "generatePost": "mkdir millions && node milseed.js POST && npm run seedSchema",
     "generateMongo": "npm run makeModel && mkdir millions && node milseed.js MONGO && npm run seed",
     "makeModel": "node establishModel.js",
-    "makeSchema": "node establishSchema.js",
+    "seedSchema": "psql postgres < schema.sql",
     "seed": "mongoimport --numInsertionWorkers 4 --db restaurant  --collection abouts --file millions/send.json",
     "seedPost": "",
     "build-prod": "./node_modules/.bin/webpack --config ./webpack.production.config.js",
